--- a/css/style.css
+++ b/css/style.css
@@ -1,93 +1,198 @@
-body{
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+* {
     margin: 0;
     padding: 0;
-    text-decoration: none;
-    font-family: "Sigmar", cursive;
-    box-sizing: border-box;
-    background: url(../images/Background.jpeg) no-repeat fixed center;
-    background-size: cover;
-    background-attachment: fixed;
 }
 
-body::before {
-    content: "";
-    display: block;
-    position: fixed;
-    top: 0;
+body {
+    box-sizing: border-box;
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.7),
+        rgba(0, 0, 0, 0.7)
+      ), url(../images/Background.jpg) fixed no-repeat center;
+    background-size: cover;
+}
+
+.lang {
+  display: flex;
+  flex-direction: row-reverse;
+  margin: 15px;
+  z-index: 1;
+}
+
+.switch {
+    z-index: 1;
+    position: relative;
+    display: inline-block;
+    margin: 0 5px;
+  }
+  
+  .switch > span {
+    position: absolute;
+    top: 14px;
+    pointer-events: none;
+    font-family: 'Helvetica', Arial, sans-serif;
+    font-weight: bold;
+    font-size: 12px;
+    text-transform: uppercase;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, .06);
+    width: 50%;
+    text-align: center;
+  }
+  
+  input.check-toggle-round-flat:checked ~ .off {
+    color: #000000;
+  }
+  
+  input.check-toggle-round-flat:checked ~ .on {
+    color: #fff;
+  }
+  
+  .switch > span.on {
     left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    opacity: 0.7;
-    z-index: -1;
+    padding-left: 2px;
+    color: #000000;
+  }
+  
+  .switch > span.off {
+    right: 0;
+    padding-right: 4px;
+    color: #fff;
+  }
+  
+  .check-toggle {
+    position: absolute;
+    margin-left: -9999px;
+    visibility: hidden;
+  }
+  .check-toggle + label {
+    display: block;
+    position: relative;
+    cursor: pointer;
+    outline: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  input.check-toggle-round-flat + label {
+    padding: 2px;
+    width: 97px;
+    height: 35px;
+    background-color: #000000;
+    -webkit-border-radius: 60px;
+    -moz-border-radius: 60px;
+    -ms-border-radius: 60px;
+    -o-border-radius: 60px;
+    border-radius: 60px;
+  }
+  input.check-toggle-round-flat + label:before, input.check-toggle-round-flat + label:after {
+    display: block;
+    position: absolute;
+    content: "";
+  }
+  
+  input.check-toggle-round-flat + label:before {
+    top: 2px;
+    left: 2px;
+    bottom: 2px;
+    right: 2px;
+    background-color: #000000;
+    -moz-border-radius: 60px;
+    -ms-border-radius: 60px;
+    -o-border-radius: 60px;
+    border-radius: 60px;
+  }
+  input.check-toggle-round-flat + label:after {
+    top: 4px;
+    left: 4px;
+    bottom: 4px;
+    width: 48px;
+    background-color: #fff;
+    -webkit-border-radius: 52px;
+    -moz-border-radius: 52px;
+    -ms-border-radius: 52px;
+    -o-border-radius: 52px;
+    border-radius: 52px;
+    -webkit-transition: margin 0.2s;
+    -moz-transition: margin 0.2s;
+    -o-transition: margin 0.2s;
+    transition: margin 0.2s;
+  }
+  
+  input.check-toggle-round-flat:checked + label:after {
+    margin-left: 44px;
   }
 
-.fundo{
-    max-width: 1300px;
-    margin: auto;
-    padding: 0 40px;
-}
-
-#card{
+  .card {
+    position: absolute;
+    top: 0;
+    left: 0;
     height: 100vh;
-    min-height: 500px;
-}
-
-#card .fundo{
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
-    text-align: center;
-}
-
-#card .content{
-    display: flex;
     flex-direction: column;
+    color: white;
+    font-family: "Roboto", sans-serif;
+    z-index: 0;
+}
+
+.content {
+    display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
-    width: 100%;
-    max-width: 800px;
-    margin: auto;
-    text-align: center;
-    color: #fff;
+    flex-direction: column;
+    gap: 15px;
 }
 
-#card .content img{
-    width: 177px;
-    height: 177px;
+.pfp {
+    height: 200px;
     border-radius: 50%;
-    border: 5px solid;
+    border: 5px solid white;
 }
 
-#card .content img:hover{
-    border: 7px solid;
+.pfp:hover {
+    border: 5px dotted white;
+    cursor: pointer;
 }
 
-
-#card .content h1{
-    margin-top: 15px;
-    font-size: 45px;
-    margin-bottom: 6px;
-    display: block;
+.name {
+    text-align: center;
+    gap: 5px;
 }
 
-#card .content p{
-    color: rgb(144, 141, 141);
-    font-size: 13px;
-    font-family: 'Quicksand', sans-serif;
-    
+#about-me {
+  text-align: center;
+  font-size: 13pt;
+  font-weight: bold;
+  max-width: 500px;
 }
 
-.redes_sociais a{
-    text-decoration: none;
-    color: #fff;
-    font-size: 30px;
-    margin: 0 10px;
-    transition: .2s linear;
+.social {
+    gap: 13px;
 }
 
-.redes_sociais a:hover{
-    font-size: 50px;
+.social a {
+    margin-right: 13px;
+}
+
+.social i {
+    cursor: pointer;
+    color: white;
+    font-size: 2rem;
+    transition: font-size 0.3s ease, transform 0.3s ease;
+}
+
+.social a:last-child {
+    margin-right: 0;
+}
+
+.social i:hover {
+    font-size: 3rem;
+    transform: scale(1.1);
 }
