--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 * {
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 body {
@@ -148,6 +149,7 @@ body {
     justify-content: center;
     flex-direction: column;
     gap: 15px;
+    max-width: 385px;
 }
 
 .pfp {
